install script to deploy to Jetty