@@ -59,11 +59,12 @@ else
 	eval "$sshCommand $hostname 'wget http://mirrors.ibiblio.org/pub/mirrors/eclipse/jetty/${jettyVersion}/dist/jetty-distribution-${jettyVersion}.tar.gz'"
 	echo "--- Extract Jetty ${jettyVersion}"
 	eval "$sshCommand $hostname 'tar xzvf jetty-distribution-${jettyVersion}.tar.gz'"
-	echo "--- Add perf.test.backend.hostname property to catalina.sh"
-	eval "$sshCommand $hostname 'cd jetty-distribution-${jettyVersion}/bin; echo \"99a100,101\" >> catalina.patch'"
-	eval "$sshCommand $hostname 'cd jetty-distribution-${jettyVersion}/bin; echo \"> JAVA_OPTS=\\\"\\\$JAVA_OPTS -Dperf.test.backend.hostname=$backend/ws-backend-mock\\\"\" >> catalina.patch'"
-	eval "$sshCommand $hostname 'cd jetty-distribution-${jettyVersion}/bin; echo \"> \" >> catalina.patch'"
-	eval "$sshCommand $hostname 'cd jetty-distribution-${jettyVersion}/bin; patch catalina.sh catalina.patch'"
+	echo "--- Add perf.test.backend.hostname property to jetty.sh"
+	eval "$sshCommand $hostname 'cd jetty-distribution-${jettyVersion}/bin; echo \"43a44,46\" >> jetty_sh.patch'"
+	eval "$sshCommand $hostname 'cd jetty-distribution-${jettyVersion}/bin; echo \"> \" >> jetty_sh.patch'"
+	eval "$sshCommand $hostname 'cd jetty-distribution-${jettyVersion}/bin; echo \"> JAVA_OPTIONS=\\\"-Dperf.test.backend.hostname=$backend/ws-backend-mock -Xms1024m -Xmx1024m -server -XX:+UseConcMarkSweepGC\\\"\" >> jetty_sh.patch'"
+	eval "$sshCommand $hostname 'cd jetty-distribution-${jettyVersion}/bin; echo \"> \" >> jetty_sh.patch'"
+	eval "$sshCommand $hostname 'cd jetty-distribution-${jettyVersion}/bin; patch jetty.sh jetty_sh.patch'"
 fi
 
 echo "--- Build WSPerfLab"
